# griptape-nodes-library-huggingface-flux

./: .gitignore  README.md  fast_flux_test.py  memoryapproach.md  pyproject.toml
Setup/: __init__.py  model_download.py
huggingface_cuda/: README.md  __init__.py  gpu_config.json  gpu_configuration.py  griptape-nodes-library.json  library_loader.py  library_loader_broken.py  library_loader_clean.py
huggingface_cuda/flux/: __init__.py  flux_config.json  flux_config.py  flux_cuda_backend.py  flux_cuda_backend_new.py  flux_cuda_backend_old.py  flux_cuda_helpers.py  flux_generation_engine.py  flux_inference.py  flux_inference_minimal.py  flux_inference_old.py  flux_memory_manager.py  flux_model_scanner.py  flux_model_selection.py  flux_parameter_builder.py  flux_pipeline_loader.py  flux_result_processor.py
huggingface_cuda/shared/: __init__.py  gpu_config.py  gpu_utils.py  model_validation.py  text_encoders.py
huggingface_diffusers/: griptape-nodes-library.json  library_loader.py
huggingface_diffusers/nodes/: flux_inference.py  flux_model_selector.py
huggingface_diffusers/shared/: hf_cache_scanner.py  inference_runner.py  model_config.py  safe_settings.py
huggingface_flux_cuda/: flux_inference.py  griptape-nodes-library.json
huggingface_flux_mlx/: flux_config.json  flux_inference.py  griptape-nodes-library.json  lora_discovery.py  lora_loader.py  lora_set.py
huggingface_flux_mlx/Workflows/: flux-dev-setup.py  (+1 more)
nvidia_nim/: README.md  griptape-nodes-library.json  library_loader.py
vidia_nim/: README.md  griptape-nodes-library.json  library_loader.py
(+8 files in other folders)
